# digital-asset-manager

./: .env.example  .gitignore  CLAUDE.md  UI updates.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: assets.rs  auth.rs  folders.rs  mod.rs  search.rs  settings.rs  tags.rs
src-tauri/src/db/: init.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_fts.sql  003_fts_backfill.sql
src-tauri/src/models/: asset.rs  folder.rs  metadata.rs  mod.rs  tag.rs
src-tauri/src/worker/: metadata.rs  mod.rs  queue.rs  thumbnail.rs
src/api/: assets.ts  auth.ts  folders.ts  search.ts  settings.ts  tags.ts
src/components/AssetGrid/: AssetCard.tsx  AssetGrid.tsx
src/components/AssetPreview/: MetadataPanel.tsx  PreviewPane.tsx
src/components/Auth/: AuthGuard.tsx  LoginPage.tsx  OrgSwitcher.tsx
src/components/FolderTree/: FolderNode.tsx  FolderTree.tsx
src/components/Layout/: AppLayout.tsx  Sidebar.tsx
src/components/Search/: FilterSidebar.tsx  SearchBar.tsx  SearchResults.tsx
src/components/TagEditor/: TagEditor.tsx  TagPicker.tsx
src/components/common/: Breadcrumb.tsx  ConfirmDialog.tsx  StorageSetupModal.tsx  Toaster.tsx
src/hooks/: useAssets.ts  useFolderTree.ts  useSearch.ts  useTags.ts
src/store/: searchStore.ts  toastStore.ts  uiStore.ts
src/types/: asset.ts  auth.ts  folder.ts  metadata.ts  tag.ts
