[package]
name = "dam-app"
version = "0.1.0"
description = "Digital Asset Manager — local-first desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "dam_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Async
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "migrate", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff", "bmp", "gif"] }
kamadak-exif = "0.5"

# Utilities
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Auth
jsonwebtoken = "9"
keyring = "3"
reqwest = { version = "0.12", features = ["json"] }
